# gheim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATASET_CARD.md  MODEL_CARD.md  MODEL_CARD_RESEARCH.md  Makefile  README.md  REPRODUCE.md  package.json  pyproject.toml  run_ablations.sh  run_bakeoff.sh  run_bakeoff_resume.sh  run_gheim25_bakeoff.sh  run_gheim2_bakeoff.sh  run_gheim2_swissbert_only.sh
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/src/gheim_server/: __init__.py  auth.py  main.py  registry.py
server/tests/: test_api.py  test_validation.py
training/: README.md  pyproject.toml
training/configs/: ablation_xlmr_no_l7.yaml  ablation_xlmr_no_l8.yaml  accelerate_ddp.yaml  accelerate_ddp_fp32.yaml  bakeoff_priv.yaml  bakeoff_swissbert.yaml  bakeoff_xlmr.yaml  gheim25_swissbert.yaml  gheim25_xlmr.yaml  gheim2_priv.yaml  gheim2_swissbert.yaml  gheim2_xlmr.yaml  sweep_v2_priv.yaml  sweep_v2_swissbert.yaml  sweep_v2_xlmr.yaml  sweep_xlmr.yaml  train.yaml  train_commercial.yaml  train_multisource.yaml  v2_xlmr.yaml
training/eval/: labeling_prompt.md
training/eval/handcrafted/: de_ch.jsonl  fr_ch.jsonl  gsw.jsonl  it_ch.jsonl  rm.jsonl
training/src/gheim_training/: __init__.py  train.py
training/src/gheim_training/data/: ai4privacy.py  ai4privacy_remap.py  balance.py  bioes.py  build.py  build_hf.py  build_hf_multisource.py  coverage_gate.py  english_anchor.py  external_train.py  label_space.py  lang_detect.py  openpii_1m.py  p10_train_mix.py  p11_build_hf.py  p14_inject_synth_to_eval.py  p17_cleanup_schema.py  p1_lang_redetect.py  p1_regex_augment.py  p1_regex_mine_source.py  p2_sample.py  (+14 more)
training/tests/: test_aggregate_labels.py  test_ai4privacy_remap.py  test_apertus_label.py  test_build_test_v1.py  test_coverage_gate.py  test_cr_identify.py  test_data_layers.py  test_finalize_test_v1.py  test_gemma_prompts.py  test_labelled_schema.py  test_lang_detect.py  test_openpii_1m.py  test_smoke.py  test_swiss_address.py  test_v2_cr_identify.py  test_v2_schema.py  test_v3_core.py
(+293 files in other folders)
