[project]
name = "gheim-server"
version = "0.1.0"
description = "PII detection HTTP server — pairs with the `gheim` client library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Joel Barmettler", email = "joel.barmettler@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "torch>=2.2",
    "transformers>=4.45",
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
gheim-server = "gheim_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gheim_server"]
